add SideBar component

--- a/app/app.css
+++ b/app/app.css
@@ -21,6 +21,15 @@ body {
     @apply font-Montserrat;
   }
 }
+/* ẩn thanh scroll */
+/* globals.css */
+.scrollbar-none {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+.scrollbar-none::-webkit-scrollbar {
+  display: none;
+}
 
 /* @keyframes fadeIn {
   from { opacity: 0; transform: translateY(10px); }
