--- a/app/app.css
+++ b/app/app.css
@@ -60,3 +60,14 @@ body {
 .animate-fadeOut {
   animation: fadeOut 0.3s ease-out forwards;
 } */
+ .perspective {
+  perspective: 1000px;
+}
+
+.backface-hidden {
+  backface-visibility: hidden;
+}
+
+.rotate-y-180 {
+  transform: rotateX(180deg);
+}
