--- a/app/app.css
+++ b/app/app.css
@@ -10,7 +10,7 @@
 
 html,
 body {
-  @apply bg-white dark:bg-gray-950 text-black select-none;
+  @apply bg-white text-black select-none;
 
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
@@ -31,35 +31,7 @@ body {
   display: none;
 }
 
-/* @keyframes fadeIn {
-  from { opacity: 0; transform: translateY(10px); }
-  to { opacity: 1; transform: translateY(0); }
-}
-@keyframes fadeOut {
-  from { opacity: 1; transform: translateY(0); height: 100%;}
-  to { opacity: 0; transform: translateY(10px); height: 0; }
-}
-@keyframes slideUp {
-  from {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
 
-.animate-slideUp {
-  animation: slideUp 0.3s ease forwards;
-}
-
-.animate-fadeIn {
-  animation: fadeIn 0.3s ease-out forwards;
-}
-.animate-fadeOut {
-  animation: fadeOut 0.3s ease-out forwards;
-} */
  .perspective {
   perspective: 1000px;
 }
