--- a/app/app.css
+++ b/app/app.css
@@ -43,3 +43,30 @@ body {
 .rotate-y-180 {
   transform: rotateX(180deg);
 }
+@keyframes shake {
+  0%, 100% { transform: translateX(0); }
+  20% { transform: translateX(-6px); }
+  40% { transform: translateX(6px); }
+  60% { transform: translateX(-6px); }
+  80% { transform: translateX(6px); }
+}
+
+.shake {
+  animation: shake 0.5s ease;
+}
+@keyframes shrinkAndHide {
+  0% {
+    transform: scale(1);
+    background-color: rgba(78, 236, 78, 0.5);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0);
+    opacity: 0;
+    visibility: hidden; /* ẩn thẻ sau khi thu nhỏ */
+  }
+}
+
+.shrink-hide {
+  animation: shrinkAndHide 0.5s forwards ease-in-out;
+}
